third version of search functionnality

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
         <h4>Search Conversations</h4>
         <input type="text" id="searchInputByText" placeholder="Search conversations by text"/>
         <div id="conversationResults"></div>
+        <div id="conversationContent">
+        </div>
+        <h4>Search of bubbles</h4>
+        <input type="text" id="searchInputByBubbleName" placeholder="Search about a bubble by name"/>
+        <div id="bubbleSearchResults"></div>
+        <h4>Search of channels</h4>
+        <input type="text" id="searchInputByChannelName" placeholder="Search about a channel by name"/>
+        <div id="channelSearchResults"></div>
     </div>
 </body>
 </html>
